compiler/testData/cli/js/compilationErrorExposureOfPrivateTypes.out
warning: argument "-Xsuppress-warning" is deprecated. Use "-Xwarning-level=NOTHING_TO_INLINE:disabled" instead
compiler/testData/cli/js/compilationErrorExposureOfPrivateTypes.kt:14:43: error: public-API inline function accesses a non Public-API class 'A'. This could happen as a result of cascaded inlining of the following functions:
private inline fun privateInlineFun1()
private inline fun privateInlineFun2()
private inline fun privateInlineFun3()


internal inline fun internalInlineFun() = privateInlineFun3()
                                          ^^^^^^^^^^^^^^^^^^^
COMPILATION_ERROR
